[package]
name = "av1stats"
version = "0.1.0"
authors = ["Raphaël Zumer <raphael.zumer@vimeo.com>"]
edition = "2018"

[dependencies]
av1parser = { git = "https://github.com/yohhoy/av1parser", rev = "e85d26daa32e02cfab9292e11a3bfca0469dbe34" }
clap = "~2.33"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
